syntax = "proto3";

package proto;

message StreamPoint {
  string name = 1;
  int64 value = 2;
}

message StreamRequest {
  StreamPoint pt = 1;
}

message StreamResponse {
  StreamPoint pt = 1;
}

service StreamService {
  //服务端流
  rpc List(StreamRequest) returns (stream StreamResponse){};

  //客户端流
  rpc Record(stream StreamRequest) returns (StreamResponse){};

  //双向流
  rpc Route(stream StreamRequest) returns (stream StreamResponse){};
}